--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="http://localhost:4200/vendors~main.js"></script>
+  <script type="text/javascript" src="http://localhost:4200/main.js"></script>
 </body>
 </html>
