--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <%= htmlWebpackPlugin.options.baseTag %>
   <meta charset="UTF-8">
   <link rel="icon" href="fav.ico" sizes="16x16" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
